--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,14 +5,25 @@
 #|      |||   ||   ||   ||    ,---||    ||    |   |  |#
 #|  `---'``   '`---|`---'`---'`---^`    ``---'`---|  |#
 #|             `---'                          `---'  |#
-#|                              Recode Version 17    |#
+#|                              Recode Version 17.2  |#
 #######################################################
 
 #_____________Checks_____________#
 Movement:
   IrregularPositions:
     enabled: true
+    setback: true
     max_vl: 15
+
+  SpeedA:
+    enabled: true
+    setback: true
+    max_vl: 50
+
+  BoatFly:
+    enabled: true
+    setback: true
+    max_vl: 50
 
 ClientData:
   GroundSpoof:
@@ -20,12 +31,20 @@ ClientData:
     damage: false
     setback: true
     max_vl: 10
+
+  Packet:
+    BadPacketsA:
+      enabled: true
+      setback: true
+      max_vl: 3
 #_____________Settings_____________#
+
+#_______EventPriority_______#
+# LOWEST LOW NORMAL HIGH HIGHEST
+even-priority: "HIGHEST"
 
 #_______Prevent_______#
 Cancel:
-  # Should we enable movement / combat cancel?
-  enabled: true
   # Above this violation level singularity will try to cancel irregular actions.
   cancel_vl: 3
 
