--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,13 @@
 name: Singularity
 authors: [TheforgTN]
-version: 26.00
+version: 26.01
 main: theforgtn.Main
 api-version: 1.19
 folia-supported: true
 commands:
   singularity:
     description: plugin version
+  singularity help:
+    description: list of avalible commands
+  singularity verbose:
+    description: realtime violation flags
